# Homies

./: .gitignore  README.md
AbstractTemplateClass/: AbstractList.hpp  ArrayList.hpp  Makefile  main.cpp
MatrixClass/: Matrix_methods.cpp  matrix_lib.hpp
Regex/: README.md  hello-world.js  messing around.js  number-matching.js  regexEvaluator.js
TinyCMakeGitDownload/: CMakeLists.txt  README.md  hello_fmt.cpp
VectorClass/: Makefile  README.md  Vector_methods.cpp  dynamvector.hpp  main.cpp
